Release 1.1.0 (unreleased)
==========================


Release 1.0.1 (2017-05-07)
==========================

* Make sqlalchemy and whoosh as optional dependency

Release 1.0.0 (2017-04-23)
==========================

* Initial release (copied from sphinx package)