@@ -1,6 +1,7 @@
 Release 1.1.0 (unreleased)
 ==========================
 
+* Support testing with Sphinx-1.7
 
 Release 1.0.1 (2017-05-07)
 ==========================
